# MaNGOS

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
dep/: CMakeLists.txt
src/: CMakeLists.txt
src/framework/: CMakeLists.txt  Common.cpp  Common.h  Errors.h  Log.cpp  Log.h  SystemConfig.h.in  Util.cpp  Util.h  Version.h
src/framework/Config/: Config.cpp  Config.h
src/framework/Daemon/: PosixDaemon.cpp  WheatyExceptionReport.cpp
src/framework/Database/: Database.cpp  Database.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabasePostgre.h  SQLStorage.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.h
src/framework/GridSystem/: Grid.h  GridRefManager.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h
src/framework/Platform/: Define.h
src/framework/Utilities/: ByteBuffer.cpp  ByteBuffer.h  ByteConverter.h  LinkedList.h  LockedQueue.h  MPSCQueue.h  MessageBuffer.h  ProgressBar.cpp  ProgressBar.h  Singleton.h  SingletonImpl.h  ThreadingModel.h  Timer.h
src/framework/Utilities/LinkedReference/: Reference.h
src/game/: AccountMgr.cpp  AccountMgr.h  CMakeLists.txt  GameClock.cpp  GameClock.h  MagicNumber.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  Opcodes.cpp  Opcodes.h  SQLStorages.cpp  SQLStorages.h  SQLStructure.h  SharedDefines.h  World.cpp  World.h  WorldPacket.h  WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/game/Auth/: AuthCrypt.cpp  AuthCrypt.h
src/game/Entities/: CalcStat.cpp  CalcStat.h  Corpse.h  Creature.h  DynamicObject.cpp  DynamicObject.h  GameObject.h  Object.cpp  Object.h  ObjectGuid.cpp  ObjectGuid.h  Pet.h  Player.cpp  Player.h  Unit.cpp  Unit.h  UpdateData.cpp  UpdateData.h  UpdateFields.h  UpdateMask.h
src/game/Entities/Player/: StatSystem.cpp
src/game/Entities/Unit/: SpellSystem.cpp  StatSystem.cpp
src/game/Handlers/: CharacterHandler.cpp  ItemHandler.cpp  MovementHandler.cpp  SpellHandler.cpp
src/game/Items/: Inventory.cpp  Inventory.h  Item.cpp  Item.h  PcInventory.cpp  PcInventory.h
src/game/Maps/: Camera.cpp  Camera.h  Cell.h  CellImpl.h  GridDefines.h  GridMap.cpp  GridMap.h  GridMapImpl.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  TileMap.cpp  TileMap.h
src/game/Packets/: S_ActiveSpells.hpp  S_AddSkill.hpp  S_CharTitle.hpp  S_DoActionGFX.hpp  S_HPUpdate.hpp  S_InitialAbilityGrowth.hpp  S_InvList.hpp  S_Karma.hpp  S_LoginToGame.hpp  S_MPUpdate.hpp  S_MapID.hpp  S_MoveChar.hpp  S_OwnCharPack.hpp  S_OwnCharStatus.hpp  S_SPMR.hpp  S_ServerMessage.hpp  S_SystemMessage.hpp  S_Weather.hpp
src/game/References/: MapRefManager.h  MapReference.h
src/game/Spells/: Spell.cpp  Spell.h  SpellAuraEffects.cpp  SpellAuras.cpp  SpellAuras.h  SpellEffects.cpp  SpellMgr.cpp  SpellMgr.h
src/game/Storages/: ExpTable.cpp  ExpTable.h  GetBackTable.cpp  GetBackTable.h  ItemTable.cpp  ItemTable.h  MapTable.cpp  MapTable.h  SpellTable.cpp  SpellTable.h
src/mangosd/: CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  FreezeDetectorRunnable.cpp  FreezeDetectorRunnable.h  Main.cpp  Master.cpp  Master.h  WorldRunnable.cpp  WorldRunnable.h  mangosd.conf.dist.in
src/tests/: CMakeLists.txt
src/tests/Client/: CMakeLists.txt  main.cpp
src/tests/Database/: CMakeLists.txt  main.cpp
